plugins {
    id 'java'
}

version = '3.2.1'
group = 'com.example'

base {
    archivesName = 'CMDMaker-Paper-1.21'
}

description = 'Command Maker — Supports Paper, Folia, Purpur, and Sponge (1.21.x)'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.21.4-R0.1-SNAPSHOT'
    compileOnly 'org.spongepowered:spongeapi:13.0.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    compileOnly 'net.luckperms:api:5.4'
}

processResources {
    filesMatching('plugin.yml') {
        expand 'version': project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}
